# VST-TEST-2

./: DATA_FLOW.md  README.md
EWOL/: CMakeLists.txt  EWColors.h  EWControls.h  EWLayout.h  EWOL.h  EWPlugin.h
EWOL/TEMPLATE/: CMakeLists.txt  EwolFXPlugin.cpp  EwolFXPlugin.h
EwolFX_Gain/: CMakeLists.txt  EwolFX_Gain.cpp  EwolFX_Gain.h  config.h  test_factory.py  test_load.py
EwolFX_Gain/resources/: Info.plist  resource.h
EwolFX_ZPlane/: CMakeLists.txt  EwolFX_ZPlane.cpp  EwolFX_ZPlane.h  README.md  config.h  test_filter  test_filter.cpp  test_filter2  test_filter2.cpp
EwolFX_ZPlane/resources/: Info.plist
MyPermissivePlugin/: CMakeLists.txt  MyPermissivePlugin.cpp  MyPermissivePlugin.h
